--- a/index.qmd
+++ b/index.qmd
@@ -10,7 +10,7 @@ title: "Welcome!"
 ::: {.column width="60%"}
 -   Hi! My name is Gaetano Scaduto and this is my personal website.
 
--   I am a PhD Student at the University of Milan-Bicocca. I am researching in the fields of political communication, political psychology, election studies, and related.
+-   I am a PhD Student at the University of Milan-Bicocca. I am researching in the fields of political communication, political psychology, and related.
 
 -   In this site you can find information about myself and my work, materials and code I produced for teaching and presentations, academic and non-academic articles, and other random stuff I decide to put here. 
 :::
