--- a/publications.qmd
+++ b/publications.qmd
@@ -45,3 +45,5 @@ Here you can find the papers I worked on. If you need further info or full texts
     -   A super-duper-long article about [Bernie Sanders' 2020 presidential campaign](https://nienteditwee.blogspot.com/2019/12/).
 
     -   A super-duper-looper long article about [my fake troll run for school council in 2016](https://nienteditwee.blogspot.com/2016/10/).
+
+-   In April 2024 I gave a recreational presentation about "Fermat's Last Theorem" at the M2P Staff Meeting (University of Antwerp). You can find the slides, summarizing the story, [here](https://github.com/gaetanoscaduto/other-stuff/blob/main/Fermat%E2%80%99s%20Last%20Problem%20(2).pdf).
