--- a/cv.qmd
+++ b/cv.qmd
@@ -2,20 +2,31 @@
 title: "CV"
 ---
 
-<object data="cv.pdf" type="application/pdf" width="800px" height="800px">
-<embed src="cv.pdf">
-Your browser does not support PDFs embedded in this website. You can still view my cv at <a href="https://github.com/gaetanoscaduto/cv/tree/main/cv_pdf/cv.pdf">this link</a>.</p>
+You can also download the cv <a href="https://github.com/gaetanoscaduto/cv/tree/main/cv_pdf/cv.pdf">here</a>
+<object data="cv.pdf" type="application/pdf" width="800px" height="800px"> <embed src="cv.pdf"> Your browser does not support PDFs embedded in this website. You can still view my cv at <a href="https://github.com/gaetanoscaduto/cv/tree/main/cv_pdf/cv.pdf">this link</a>.
+
+</p>
+
 </embed>
+
 </object>
 
-
 <!-- ```{r} -->
+
 <!-- downloadthis::download_link( -->
+
 <!--   link = "https://github.com/gaetanoscaduto/cv/blob/main/cv_pdf/cv.pdf", -->
+
 <!--   button_label = "Download pdf file", -->
+
 <!--   button_type = "danger", -->
+
 <!--   has_icon = TRUE, -->
+
 <!--   icon = "fa fa-save", -->
+
 <!--   self_contained = FALSE -->
+
 <!-- ) -->
+
 <!-- ``` -->
