--- a/cv.qmd
+++ b/cv.qmd
@@ -2,7 +2,9 @@
 title: "CV"
 ---
 
-You can also download the cv <a href="https://github.com/gaetanoscaduto/cv/tree/main/cv_pdf/cv.pdf">here</a>
+ <p> <i class="fas fa-download pr-1 fa-fw"></i><a href=cv.pdf target=_blank> Download my cv</a>.</p>
+
+<!-- You can also download the cv <a href="https://github.com/gaetanoscaduto/cv/tree/main/cv_pdf/cv.pdf">here</a> -->
 <object data="cv.pdf" type="application/pdf" width="800px" height="800px"> <embed src="cv.pdf"> Your browser does not support PDFs embedded in this website. You can still view my cv at <a href="https://github.com/gaetanoscaduto/cv/tree/main/cv_pdf/cv.pdf">this link</a>.
 
 </p>
