--- a/cv.qmd
+++ b/cv.qmd
@@ -2,16 +2,16 @@
 title: "CV"
 ---
 
- <p> <i class="fas fa-download pr-1 fa-fw"></i><a href=cv.pdf target=_blank> Download my cv</a>.</p>
+ <p> <i class="fas fa-download pr-1 fa-fw"></i><a href=cv.pdf target=_blank> Click here to download my cv</a>.</p>
 
 <!-- You can also download the cv <a href="https://github.com/gaetanoscaduto/cv/tree/main/cv_pdf/cv.pdf">here</a> -->
-<object data="cv.pdf" type="application/pdf" width="800px" height="800px"> <embed src="cv.pdf"> Your browser does not support PDFs embedded in this website. You can still view my cv at <a href="https://github.com/gaetanoscaduto/cv/tree/main/cv_pdf/cv.pdf">this link</a>.
+<!-- <object data="cv.pdf" type="application/pdf" width="800px" height="800px"> <embed src="cv.pdf"> Your browser does not support PDFs embedded in this website. You can still view my cv at <a href="https://github.com/gaetanoscaduto/cv/tree/main/cv_pdf/cv.pdf">this link</a>. -->
 
-</p>
+<!-- </p> -->
 
-</embed>
+<!-- </embed> -->
 
-</object>
+<!-- </object> -->
 
 <!-- ```{r} -->
 
