--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,7 @@
 title: "Welcome!"
 ---
 
+```{=html}
 <style>
   body {
   background-image: url("background.jpeg");
@@ -9,17 +10,28 @@ title: "Welcome!"
   background-repeat: no-repeat;
 }
   
+.text-background {
+    background-color: rgba(256, 256, 256, 0.6); 
+    color: black; /* White text for contrast */
+    padding: 5px 10px; /* Padding around text */
+    display: inline-block; /* Ensures the background only takes up necessary space */
+}
 </style>
-
+```
 ::: columns
-::: {.column width="25%"}
+::: {.column width="35%"}
 ![](images/286213066_5145122178874519_2871984436336791330_n.jpg)
 :::
 
-::: {.column width="75%"}
--   Hi! My name is Gaetano Scaduto and this is my personal website.
+::: {.column width="65%"}
+::: text-background
+Hi! My name is Gaetano Scaduto and this is my personal website.
 
--   I am a PhD Student researching in the fields of political communication, political psychology, and related. In my work, I specialize in quantitative methods, computational methods, and survey experiments.
+I am a PhD Student researching in the fields of political communication, political psychology, and related.
 
+In my work, I specialize in quantitative methods, computational methods, and survey experiments.
+
+In this site you can find my CV, bio, publications, teaching materials and other random stuff I decide to put here ;)
+:::
 :::
 :::
