--- a/contacts.qmd
+++ b/contacts.qmd
@@ -2,6 +2,25 @@
 title: "Contacts"
 ---
 
+```{=html}
+<style>
+  body {
+  background-image: url("/backgrounds/background_ag2.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+  
+.text-background {
+    background-color: rgba(256, 256, 256, 0.6); 
+    color: black; /* White text for contrast */
+    padding: 5px 10px; /* Padding around text */
+    display: inline-block; /* Ensures the background only takes up necessary space */
+}
+</style>
+```
+
+::: text-background
+
 Here are my contacts:
 
 -   For matters related to my job, you can write me an email at the following address: gaetano.scaduto\@unimib.it
@@ -11,3 +30,5 @@ Here are my contacts:
 -   You can follow me on Linkedin [here](https://www.linkedin.com/in/gaetano-scaduto-92b6981ba/).
 
 -   You can follow me on ResearchGate [here](https://www.researchgate.net/profile/Gaetano-Scaduto).
+
+::: 
