--- a/index.qmd
+++ b/index.qmd
@@ -5,7 +5,7 @@ title: "Welcome!"
 ```{=html}
 <style>
   body {
-  background-image: url("background.jpeg");
+  background-image: url("/backgrounds/background_1.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
 }
