--- a/publications.qmd
+++ b/publications.qmd
@@ -4,37 +4,9 @@ title: "Publications"
 
 Here you can find the list of the papers I worked on. If you need further info, just reach out and I'll be happy to share more! You can also find the most updated list of my publications on [my profile in google scholar](https://scholar.google.it/citations?user=g52GJngAAAAJ&hl=it&oi=ao).
 
-If your institution does not provide access to the papers, send me an email! I'm always happy to share :)
+If your institution provides access to the papers, please download them from the websites linked with the authors' names. This helps with my stats.
 
-<!-- <html> -->
-<!-- <head> -->
-<!--     <title>Send me an email!</title> -->
-<!-- </head> -->
-<!-- <body> -->
-
-<!-- <button onclick="window.location.href='mailto:gaetano.scaduto@unimib.it?subject=Paper%20request&body=Hi%20Gaetano!'">Send me an email!</button> -->
-
-<!-- </body> -->
-<!-- </html> -->
-
-<html>
-<head>
-    <title>Email Button Example</title>
-    <script type="text/javascript">
-        function sendEmail() {
-            var email = "gaetano.scaduto@unimib.it";
-            var subject = "Paper request";
-            var body = "Hi Gaetano! I need...";
-            window.location.href = "mailto:" + email + "?subject=" + encodeURIComponent(subject) + "&body=" + encodeURIComponent(body);
-        }
-    </script>
-</head>
-<body>
-
-<button onclick="sendEmail()">Send me an email at gaetano.scaduto@unimib.it!</button>
-
-</body>
-</html>
+If you do not have access, you can click on the download button below each publication, because I believe in open science and that everyone should have access to academic knowledge.
 
 ## Published papers
 
@@ -42,25 +14,25 @@ If your institution does not provide access to the papers, send me an email! I'm
 
     -   My first paper, but on steroids.
 
-        <!-- <p><i class="fas fa-download pr-1 fa-fw"></i><a href=publications/Mancosu_Scaduto_2024.pdf target=_blank> Click here to download</a>.</p> -->
+        <p><i class="fas fa-download pr-1 fa-fw"></i><a href=publications/Mancosu_Scaduto_2024.pdf target=_blank> Click here to download</a>.</p>
 
 -   [Bertero, A, Scaduto, G](https://oaj.fupress.net/index.php/qoe/article/view/14224). (2023). A midsummer night's dream: political communication during the Italian 2022 electoral campaign. Italian Journal of Electoral Studies QOE-IJES.
 
     -   A paper that deals with analyzing the 2022 electoral campaign in Italy from a political communication POV.
 
-        <!-- <p><i class="fas fa-download pr-1 fa-fw"></i><a href=publications/Bertero_Scaduto_2023.pdf target=_blank> Click here to download</a>.</p> -->
+        <p><i class="fas fa-download pr-1 fa-fw"></i><a href=publications/Bertero_Scaduto_2023.pdf target=_blank> Click here to download</a>.</p>
 
 -   [Scaduto, G., & Mancosu, M. (2022).](https://www.rivisteweb.it/doi/10.3270/104851) Lacrime di coccodrillo? Variazioni nel contenuto visuale su Instagram dei politici populisti e mainstream durante la pandemia. *Comunicazione politica*, *23*(2), 255-276.
 
     -   The very first paper I ever worked on. Tries to investigate one simple question: do political leader smile less on Instagram while there are more deaths by Covid? And are there differences between populist and non-populist?
 
-        <!-- <p><i class="fas fa-download pr-1 fa-fw"></i><a href=publications/Scaduto_Mancosu_2022.pdf target=_blank> Click here to download</a>.</p> -->
+        <p><i class="fas fa-download pr-1 fa-fw"></i><a href=publications/Scaduto_Mancosu_2022.pdf target=_blank> Click here to download</a>.</p>
 
 -   [Scaduto, G. (2022)](https://www.rivisteweb.it/doi/10.1424/104525). Gli algoritmi di computer vision: una guida all'uso per le scienze politiche e sociali. *Polis*, *36*(2), 315-332.
 
     -   Dealing with IA and machine learning before ChatGTP, Midjourneys and all those guys were cool.
 
-        <!-- <p><i class="fas fa-download pr-1 fa-fw"></i><a href=publications/Scaduto_2022.pdf target=_blank> Click here to download</a>.</p> -->
+        <p><i class="fas fa-download pr-1 fa-fw"></i><a href=publications/Scaduto_2022.pdf target=_blank> Click here to download</a>.</p>
 
 ## Working papers/Under review
 
@@ -74,9 +46,9 @@ If your institution does not provide access to the papers, send me an email! I'm
 
 ## Other stuff I wrote
 
--   [My MA thesis](https://github.com/gaetanoscaduto/other-stuff/blob/main/TESI%20_merged.pdf)! (In italian) "Un paese di musichette mentre fuori c'è la morte? Indagine sulla comunicazione dei politici italiani su Instagram durante la pandemia di Covid-19". Thesis supervisor: prof. Moreno Mancosu.
+-   [My MA thesis](https://github.com/gaetanoscaduto/Papers-Others/blob/Papers/TESI%20_merged.pdf)! (In italian) "Un paese di musichette mentre fuori c'è la morte? Indagine sulla comunicazione dei politici italiani su Instagram durante la pandemia di Covid-19". Thesis supervisor: prof. Moreno Mancosu.
 
--   [My BA thesis](https://github.com/gaetanoscaduto/other-stuff/blob/main/Tesi%20bachelor.pdf)! (In italian) "Teoria della scelta sociale". Thesis supervisor: prof. Giacomo Como.
+-   [My BA thesis](https://github.com/gaetanoscaduto/Papers-Others/blob/Papers/Tesi%20triennale.pdf)! (In italian) "Teoria della scelta sociale". Thesis supervisor: prof. Giacomo Como.
 
 -   You can find several light-reading articles about politics and other stuff on the [personal blog](https://nienteditwee.blogspot.com/) \[in Italian\] I used to write on a couple of years ago. Among those you'll find...
 
