--- a/research.qmd
+++ b/research.qmd
@@ -40,7 +40,7 @@ At that time, I was preparing my PhD proposal. One day, I went to my mentor and 
 
 M readily understood that I was going toward a gigantic stream of literature, that would have consumed my life from then on. But I always loved this stuff, and I was ready to go down the rabbit hole. For a year or so, I read papers on the alignment regarding lifestyle and political preferences. Why do lefties prefer hip-hop, modern art, vegan food, and Birkenstocks, and why do righties prefer classical music, old and sacred art, meat, and white shirts?
 
-After a year or so, I was talking with a PhD colleague of mine, who, incidentally, used to be a student representative - responsible for the canteen - at UniTo, and I told her my story about the canteen. And here, she freaking changed my word. She told me that **no one among the student representatives ever pushed for the canteen menu to be more vegan**.
+After a year or so, I was talking with a PhD colleague of mine, who, incidentally, used to be a student representative - responsible for the canteen - at UniTo, and I told her my story about the canteen. And here, she freaking changed my world. She told me that **no one among the student representatives ever pushed for the canteen menu to be more vegan**.
 
 Now, I do not know if she was fully aware or if she was just assuming, but that completely changed my perspective.
 
