--- a/publications.qmd
+++ b/publications.qmd
@@ -10,7 +10,11 @@ If you do not have access, you can click on the download button below each publi
 
 ## Published papers
 
--   [Scaduto, G., & Negri, F. (2024)](https://doi.org/10. 1080/13608746.2024.2411539). Food for (political) thought: political inferences from apolitical cues and their social consequences in Italy. South European Society and Politics, 1–30.
+-   [Scaduto, G, Negri, F. (2024)](a. https://www.rivisteweb. it/doi/10.3270/115244). The Pundit Paradox: Exploring the Mismatch between Supply and Demand in Italian Political Talk Show Guests. Comunicazione Politica.
+
+<!-- -->
+
+-   [Scaduto, G., & Negri, F. (2024)](https://doi.org/10.%201080/13608746.2024.2411539). Food for (political) thought: political inferences from apolitical cues and their social consequences in Italy. South European Society and Politics, 1–30.
 
     -   Awarded "Best paper by a Junior Researcher" by the Italian Political Communication Association (ASSOCOMPOL) in 2024.
 
