--- a/publications.qmd
+++ b/publications.qmd
@@ -8,9 +8,11 @@ If your institution provides access to the papers, please download them from the
 
 If you do not have access, you can click on the download button below each publication, because I believe in open science and that everyone should have access to academic knowledge.
 
-## Published papers
+## Published/Accepted papers
 
--   [Scaduto, G, Negri, F. (2024)](a. https://www.rivisteweb. it/doi/10.3270/115244). The Pundit Paradox: Exploring the Mismatch between Supply and Demand in Italian Political Talk Show Guests. Comunicazione Politica.
+-   Scaduto, G. (2025). Politicultural Linking: Inferences between Political and Apolitical Traits. Accepted in Public Opinion Quarterly.
+
+-   [Scaduto, G, Negri, F. (2024)](https://www.rivisteweb.%20it/doi/10.3270/115244). The Pundit Paradox: Exploring the Mismatch between Supply and Demand in Italian Political Talk Show Guests. Comunicazione Politica.
 
 <!-- -->
 
