--- a/publications.qmd
+++ b/publications.qmd
@@ -6,7 +6,7 @@ Here you can find the list of the papers I worked on. If you need further info, 
 
 If your institution provides access to the papers, please download them from the websites linked with the authors' names. This helps with my stats.
 
-If you do not have access, you can click on the download button below each publication, because I believe in open science and that everyone should have access to academic knowledge.
+If you do not have access, please reach out via email (gaetano.scaduto\@unimib.it or gaetanoscaduto1999\@gmail.com) and I will be very glad to provide you with a copy of the manuscript.
 
 ## Published/Accepted papers
 
