--- a/beyond.qmd
+++ b/beyond.qmd
@@ -2,7 +2,7 @@
 title: "Beyond work"
 ---
 
-I think life is kind of worthless without good music and movies, and I think that the art we appreciate tells everything about us, including politics. Therefore, here I share some of the works of art I am more enthusiastic about. Because I think these things tell about me as much as (maybe more) any research I have done so far. Researching is fun, and teaching is so much fun, but neither gives you goosebumps. So here in what follows a selection of my favorite musical albums, movies, TV shows, and the like.
+I think life is kind of worthless without good music and movies. Therefore, here I share some of the works of art I am more enthusiastic about. Because I think these things tell about me as much as (maybe more) any research I have done so far. Researching is fun, teaching is fun, but art gives you goosebumps. So here in what follows a selection of my favorite musical albums, movies, TV shows, and the like.
 
 ## A selection of my favorite musical albums
 
