--- a/index.qmd
+++ b/index.qmd
@@ -31,7 +31,7 @@ I am currently a PhD Student researching in the field of political communication
 
 I have also worked in **political marketing**, contributing to multiple national electoral campaigns in Italy.
 
-I am currently **open for work**, and I am particularly interested in positions involving **survey research, data analysis**, and/or **political marketing**. If you want to discuss job oportunities, please get in touch on gaetanoscaduto1999\@gmail.com
+I am currently **open for work**, and I am particularly interested in positions involving **survey research, data analysis**, and/or **political marketing**. If you want to discuss job oportunities, please get in touch at gaetanoscaduto1999\@gmail.com
 
 In this site you can find my CV, bio, publications, teaching materials and other random stuff I decide to put here ;)
 :::
