--- a/publications.qmd
+++ b/publications.qmd
@@ -2,17 +2,47 @@
 title: "Publications"
 ---
 
+```{=html}
+<style>
+  body {
+  background-image: url("/backgrounds/background_ag1.jpeg");
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+  
+.text-background {
+    background-color: rgba(256, 256, 256, 0.8); 
+    color: black; /* White text for contrast */
+    padding: 5px 10px; /* Padding around text */
+    display: inline-block; /* Ensures the background only takes up necessary space */
+}
+</style>
+```
+
+::: text-background
+
 Here you can find the list of the papers I worked on. If you need further info, just reach out and I'll be happy to share more! You can also find the most updated list of my publications on [my profile in google scholar](https://scholar.google.it/citations?user=g52GJngAAAAJ&hl=it&oi=ao).
 
 If your institution provides access to the papers, please download them from the websites linked with the authors' names. This helps with my stats.
 
-If you do not have access, please reach out via email (gaetano.scaduto\@unimib.it or gaetanoscaduto1999\@gmail.com) and I will be very glad to provide you with a copy of the manuscript.
+If you do not have access, please reach out via email (gaetano.scaduto\@unimib.it or gaetanoscaduto1999\@gmail.com) and I will be very glad to provide you with a copy of the manuscript. If possible, in this section I also provide links to download unformatted or preprint version of my papers independently.
 
 ## Published/Accepted papers
 
 -   Scaduto, G. (2025). Politicultural Linking: Inferences between Political and Apolitical Traits. Accepted in Public Opinion Quarterly.
 
+    -   Slideshow available <i class="fas fa-download pr-1 fa-fw"></i> [here](presentations/PL_presentation.pdf){target="_blank"}.
+
 -   [Scaduto, G, Negri, F. (2024)](https://www.rivisteweb.%20it/doi/10.3270/115244). The Pundit Paradox: Exploring the Mismatch between Supply and Demand in Italian Political Talk Show Guests. Comunicazione Politica.
+
+    -   You can find a ShinyApp to play with the data from this project [here](https://gaetanoscaduto.shinyapps.io/talkshows/).
+
+    -   You can find the data and replication files for this project [here](https://github.com/gaetanoscaduto/Pundit_Paradox_Rep_Files).
+
+    -   Slideshow available <i class="fas fa-download pr-1 fa-fw"></i> [here](presentations/PP_presentation.pdf){target="_blank"}.
+
+    -   If you cannot access the paper, you can click <i class="fas fa-download pr-1 fa-fw"></i> [here](publications/manuscript%20versions/Pundit_paradox_unformatted.pdf){target="_blank"} for an unformatted version.
 
 <!-- -->
 
@@ -20,17 +50,31 @@ If you do not have access, please reach out via email (gaetano.scaduto\@unimib.i
 
     -   Awarded "Best paper by a Junior Researcher" by the Italian Political Communication Association (ASSOCOMPOL) in 2024.
 
+    -   You can play with some of the data with a ShinyApp [here](https://gaetanoscaduto.shinyapps.io/risposteaperte/).
+
+    -   The data is publicly available [here](https://www.unidata.unimib.it/?indagine=inferenze-politiche-da-elementi-apolitici-il-caso-del-cibo-in-italia-2023).
+
+    -   Part of the replication code is available [here](https://github.com/gaetanoscaduto/FFPT).
+    
+    -   Slideshow available <i class="fas fa-download pr-1 fa-fw"></i> [here](presentations/FFPT_presentation.pdf){target="_blank"}.
+
+    -   If you cannot access the paper, you can click <i class="fas fa-download pr-1 fa-fw"></i> [here](publications/manuscript%20versions/FFPT_unformatted.pdf){target="_blank"} for an unformatted version.
+
 <!-- -->
 
 -   [Mancosu, M., Scaduto, G. (2024).](https://www.tandfonline.com/doi/full/10.1080/15205436.2024.2351980)"Crowds and Smiles: Visual Opportunity Structures and the Communication of European Political Leaders during the Covid-19 Pandemic". Mass Communication & Society. *Mass Communication and Society*, 1-26.
 
-    -   My first paper, but on steroids.
+    -   Slideshow available <i class="fas fa-download pr-1 fa-fw"></i> [here](presentations/CoS_presentation.pdf){target="_blank"}. 
+    
+    - If you cannot access the paper, you can click <i class="fas fa-download pr-1 fa-fw"></i> [here](publications/manuscript%20versions/CoS_unformatted.pdf){target="_blank"} for an unformatted version.
+    
+       
 
 <!--         <p><i class="fas fa-download pr-1 fa-fw"></i><a href=publications/Mancosu_Scaduto_2024.pdf target=_blank> Click here to download</a>.</p> -->
 
 -   [Bertero, A, Scaduto, G](https://oaj.fupress.net/index.php/qoe/article/view/14224). (2023). A midsummer night's dream: political communication during the Italian 2022 electoral campaign. Italian Journal of Electoral Studies QOE-IJES.
 
-    -   A paper that deals with analyzing the 2022 electoral campaign in Italy from a political communication POV.
+    -   Open access [here](https://oaj.fupress.net/index.php/qoe/article/view/14224/12058)!
 
 <!--         <p><i class="fas fa-download pr-1 fa-fw"></i><a href=publications/Bertero_Scaduto_2023.pdf target=_blank> Click here to download</a>.</p> -->
 
@@ -58,9 +102,9 @@ If you do not have access, please reach out via email (gaetano.scaduto\@unimib.i
 
 ## Other stuff I wrote
 
--   [My MA thesis](https://github.com/gaetanoscaduto/Papers-Others/blob/Papers/TESI%20_merged.pdf)! (In italian) "Un paese di musichette mentre fuori c'è la morte? Indagine sulla comunicazione dei politici italiani su Instagram durante la pandemia di Covid-19". Thesis supervisor: prof. Moreno Mancosu.
+-   [My MA thesis](publications/TESI_merged.pdf)! (In italian) "Un paese di musichette mentre fuori c'è la morte? Indagine sulla comunicazione dei politici italiani su Instagram durante la pandemia di Covid-19". Thesis supervisor: prof. Moreno Mancosu.
 
--   [My BA thesis](https://github.com/gaetanoscaduto/Papers-Others/blob/Papers/Tesi%20triennale.pdf)! (In italian) "Teoria della scelta sociale". Thesis supervisor: prof. Giacomo Como.
+-   [My BA thesis](publications/Tesi_triennale.pdf)! (In italian) "Teoria della scelta sociale". Thesis supervisor: prof. Giacomo Como.
 
 -   You can find several light-reading articles about politics and other stuff on the [personal blog](https://nienteditwee.blogspot.com/) \[in Italian\] I used to write on a couple of years ago. Among those you'll find...
 
@@ -71,3 +115,5 @@ If you do not have access, please reach out via email (gaetano.scaduto\@unimib.i
     -   A super-duper-looper long article about [my fake troll run for school council in 2016](https://nienteditwee.blogspot.com/2016/10/).
 
 -   In April 2024 I gave a recreational presentation about "Fermat's Last Theorem" at the M2P Staff Meeting (University of Antwerp). You can find the slides, summarizing the story, [here](https://github.com/gaetanoscaduto/other-stuff/blob/main/Fermat%E2%80%99s%20Last%20Problem%20(2).pdf).
+
+::: 
