--- a/index.qmd
+++ b/index.qmd
@@ -6,6 +6,7 @@ title: "Welcome!"
 <style>
   body {
   background-image: url("/backgrounds/background_ag1.jpeg");
+  background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
 }
