--- a/index.qmd
+++ b/index.qmd
@@ -19,22 +19,17 @@ title: "Welcome!"
 }
 </style>
 ```
-::: columns
-::: {.column width="35%"}
-![](images/286213066_5145122178874519_2871984436336791330_n.jpg)
-:::
 
-::: {.column width="65%"}
 ::: text-background
-Hi! My name is Gaetano Scaduto and this is my personal website.
+Hi! My name is Gaetano Scaduto, I am 25 years old, and this is my personal website.
 
 I am currently a PhD Student researching in the field of political communication. I use my professional skills to study society and politics through **quantitative** and **computational** methods.
 
 I have also worked in **political marketing**, contributing to multiple national electoral campaigns in Italy.
 
-I am currently **open for work**, and I am particularly interested in positions involving **survey research for social and political research**. If you want to discuss job oportunities, please get in touch at gaetanoscaduto1999\@gmail.com
+I am currently **open for work**, and I am particularly interested in positions involving **survey research**. If you want to discuss job oportunities, please get in touch at gaetanoscaduto1999\@gmail.com
 
 In this site you can find my CV, bio, publications, teaching materials and other random stuff I decide to put here ;)
 :::
-:::
-:::
+
+![](images/IMG_0615-01.jpg)
