--- a/teaching.qmd
+++ b/teaching.qmd
@@ -32,7 +32,7 @@ Here you can find the teaching materials that I produced so far.
 
 -   In autumn 2023 I held two classes.
 
-    -   In one, I gave the students a practical introduction to the statistical software R for the analysis of electoral data. The class was aimed at people enrolled in the BA in "Organization Science" at the University of Milan-Bicocca, who had no previous experience neither with any statistical software nor data analysis. They had taken an introductory class in statistics and quantitative methods. You can find the teaching materials related to this class [here](teaching_materials/Condorcet.pdf).
+    -   In one, I gave the students a practical introduction to the statistical software R for the analysis of electoral data. The class was aimed at people enrolled in the BA in "Organization Science" at the University of Milan-Bicocca, who had no previous experience neither with any statistical software nor data analysis. They had taken an introductory class in statistics and quantitative methods. You can find the teaching materials related to this class [here](https://github.com/gaetanoscaduto/teaching/tree/main/introduzioneR).
     
     -   On the other, I held a class in the course of Public Policies where I explained the problems with collective decision-making. The main topics were Condorcet's paradox, strategic misreporting, and the Arrow's theorem. You can find the slides [here](https://github.com/gaetanoscaduto/teaching/tree/main/CondorcetPP).
 
