--- a/beyond.qmd
+++ b/beyond.qmd
@@ -70,7 +70,7 @@ Lana Del Rey is usually associated either with the Republican Right or the LGBTQ
 
 ![](https://m.media-amazon.com/images/I/71rogUtN9yL._UF1000,1000_QL80_.jpg){width="376"}
 
-This is THE milestone in Italian comedy prog rock ("rock demenziale"). The immortal masterpiece of a band so good that always makes me sing and laugh to the tears. I have one specific sentence in one of the songs contained in this album that I swear to tattoo on my body at some point.
+This is THE milestone in Italian comedy prog rock ("rock demenziale"). The immortal masterpiece of a band so good that always makes me sing and laugh to the tears. 
 
 **Favorite Track:** John Holmes (Una vita per il cinema)
 
