--- a/index.qmd
+++ b/index.qmd
@@ -23,13 +23,13 @@ title: "Welcome!"
 ::: text-background
 Hi! My name is Gaetano Scaduto, I am 26 years old and this is my personal website.
 
-I am currently a PhD Student researching in the field of political communication. I use my professional skills to study society and politics through **quantitative** and **computational** methods.
+I am currently a PhD Student researching in social science. I use my professional skills to study society and politics through **quantitative** and **computational** methods, while also having rigorous training in qualitative methods.
 
 I have also worked in **political marketing**, contributing to multiple national electoral campaigns in Italy.
 
-I am currently **open for work**, and I am particularly interested in positions involving **survey research**. If you want to discuss job oportunities, please get in touch at gaetanoscaduto1999\@gmail.com
+I am currently **open for work**, and I am particularly interested in positions involving **survey research**. If you want to discuss job opportunities, please get in touch at gaetanoscaduto1999\@gmail.com
 
-In this site you can find my CV, bio, publications, teaching materials and other random stuff I decide to put here ;)
+In this site you can find my CV, bio, publications, teaching materials, and other random stuff I decided to put here ;)
 :::
 
 ![](images/IMG_0615-01.jpg)
