--- a/research.qmd
+++ b/research.qmd
@@ -35,7 +35,7 @@ The two universities are pretty far from each other and have different canteens.
 
 I am an omnivore, yet I always kind of suffered from the short list of vegetarian options (and the complete lack of vegan options) that I found at the canteen near the PoliTo. When I started going to UniTo, I noticed that the canteen there ALWAYS had at least one VEGAN option. From Monday to Saturday (it was closed on Sunday) there was always something different, either lentils burgers, tofu, seitan, or something else that was prepared with a certain amount of care.
 
-I started asking myself why was that.
+I started asking myself *why*.
 
 I had always perceived the PoliTo as a kind-of-right-wing university. STEM culture in Italy is usually linked to the center and center-right. The reasons can be many, but they may reside in the fact that people who tend to choose these faculties may value as more important the amount of money they will make from their future jobs. We could discuss these reasons another time.
 
@@ -43,9 +43,9 @@ I had always perceived the PoliTo as a kind-of-right-wing university. STEM cultu
 
 I did not have at the time, and still don't, any data to prove that PoliTo students are more right-wing than UniTo students. Yet, my **perception** of them being more right was consistent with the lack of attention that, in the canteen near the PoliTo, was reserved for vegans and vegetarians; a population that, you can believe me on my word, is likely to be considered as more left-wing than most.
 
--   If you don't believe me, read my paper titled "Food for (Political) Thought" (in review, while I am writing).
+-   If you don't believe me, read my paper titled "[Food for (Political) Thought](https://www.tandfonline.com/doi/full/10.1080/13608746.2024.2411539)".
 
-At the same time, UniTo was, in my mind, left-wing heaven. Especially in the social-science-dominated Campus Einaudi (the most beautiful university campus in the world, in case you didn't know it), being a leftie was the assumed condition for everyone, and people who were not lefties were spotted and glanced with adversarial intent by most of their colleagues. Again, I do not have any data to confirm that (although one could look at the University elections and see that, while in PoliTO there were no successful extreme-left university parties, in UniTo there were at least - like - three. When I asked myself why the canteens were so different in terms of their menu, I gave myself the following response: "Probably the lefties in UniTo elected a student representative that wanted to push the availability of vegan options in the canteen, to promote environmentally friendly agenda that winked at their left-wing constituency".
+At the same time, UniTo was, in my mind, a left-wing stronghold. Especially in the social-science-dominated Campus Einaudi (the most beautiful university campus in the world, in case you didn't know it), being a leftie was the assumed condition for everyone, and people who were not lefties were spotted and glanced with adversarial intent by most of their colleagues. Again, I do not have any data to confirm that (although one could look at the University elections and see that, while in PoliTO there were no successful extreme-left university parties, in UniTo there were at least - like - three. When I asked myself why the canteens were so different in terms of their menu, I gave myself the following response: "Probably the lefties in UniTo elected a student representative that wanted to push the availability of vegan options in the canteen, to promote environmentally friendly agenda that winked at their left-wing constituency".
 
 At that time, I was preparing my PhD proposal. One day, I went to my mentor and told him something like:
 
@@ -70,5 +70,4 @@ If no student ever pushed for having a more vegan menu at UniTo's canteen, it me
 What a freaking game changer: the knowledge (or even the presumed knowledge) of the political preferences of the student body were translated into assumed lifestyle preferences, and our reality (more precisely, my lunch) was bent according to this perception.
 
 I thought this was enough to choose to dedicate my entire career to this: shedding light of the political inferences from apolitical cues, the apolitical inferences from political cues, and political stereotypes, and political compasses, and political caricatures, their consequences, causes, related aspects, so on and so forth.
-
 :::
